[gd_scene load_steps=4 format=3 uid="uid://cr1qs67pwenrc"]

[ext_resource type="Script" uid="uid://bk4dcpltc3ec2" path="res://scripts/projectile.gd" id="1_7nksb"]
[ext_resource type="Texture2D" uid="uid://5d03ocd5v2nu" path="res://textures/spear-concept-1.png" id="2_7nksb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y25gk"]
radius = 2.0
height = 8.0

[node name="spearProjectile" type="Node2D"]
script = ExtResource("1_7nksb")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.55, 0.55)
texture = ExtResource("2_7nksb")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(2.5, 2.5)

[node name="spearHit" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="spearHit"]
position = Vector2(10, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_y25gk")

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="area_entered" from="spearHit" to="." method="_on_bullet_hit_area_entered"]
[connection signal="body_entered" from="spearHit" to="." method="_on_bullet_hit_body_entered"]
